--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@
 .crece:hover{
   transform: scale(1.02);
 }
+.btn-outline-secondary{
+  border: 0cm;
+}
 
 .site-header {
   font-family: 'Raleway', serif !important;
